--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "league/flysystem": "^1.0",
         "psr/log": "^1.0",
         "symfony/process": "^3.0",
-        "graze/data-node": "^0.1.0"
+        "graze/data-node": "^0.1",
+        "graze/array-filter": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
