--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "league/flysystem": "^1.0",
         "psr/log": "^1.0",
         "symfony/process": "^3.0",
-        "graze/data-node": "^0.1",
+        "graze/data-node": "dev-master@dev",
         "graze/array-filter": "^0.1"
     },
     "require-dev": {
