--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "league/flysystem": "^1.0",
         "psr/log": "^1.0",
         "symfony/process": "^3.0",
-        "graze/data-node": "dev-master@dev",
-        "graze/array-filter": "^0.1"
+        "graze/data-node": "^1.0",
+        "graze/array-filter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
