--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,9 +1,10 @@
 # .scrutinizer.yml
 build:
-    before:
-        - apt-get update && apt-get install -y zip unzip gzip libc6 php5-xdebug --no-install-recommends
     environment:
         php: 5.6
+    tests:
+        before:
+          - apt-get update && apt-get install -y zip unzip gzip libc6 php5-xdebug --no-install-recommends
 
 # enable once code sniffer is updated to >= 2.3.4
 # checks:
