--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ matrix:
     - php: hhvm
 
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer update --no-interaction --prefer-source
+  - travis_retry composer update --no-interaction
 
 script:
-  - composer lint
-  - composer test:coverage-clover
+  - vendor/bin/phpcs -p --warning-severity=0 src/ tests/
+  - vendor/bin/phpunit --coverage-clover=./tests/report/coverage.clover
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
