--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,7 @@
             <directory suffix=".php">src/</directory>
         </whitelist>
     </filter>
+    <listeners>
+        <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
+    </listeners>
 </phpunit>
