--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,6 @@ php:
   - 7.0
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: 7.0
-    - php: hhvm
-
 before_script:
   - travis_retry composer update --no-interaction
 
@@ -18,5 +13,4 @@ script:
   - vendor/bin/phpunit --coverage-clover=./tests/report/coverage.clover
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover ./tests/report/coverage.clover
+  - ./build/coverage_to_scruitinizer.sh
