StreamReader is now an IteratorNode

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,6 +23,6 @@
         </whitelist>
     </filter>
     <listeners>
-        <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
+        <listener class="\Mockery\Adapter\Phpunit\TestListener" />
     </listeners>
 </phpunit>
