--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "league/flysystem": "^1.0",
         "psr/log": "^1.0",
         "symfony/process": "^3.0",
-        "graze/data-node": "^1.0",
+        "graze/data-node": "dev-master",
         "graze/array-filter": "^1.0",
         "guzzlehttp/psr7": "^1.3",
         "graze/csv-token": "^0.3"
